Jenkins SBuild Plugin 0.0.2:

* Improved handling of SBuild installations.
* Support multiple buildfiles.